--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@
 *.tar.gz
 *.rar
 !sqljdbc4.jar
+!mssql-jdbc-9.2.0.jre11.jar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
